# rules_clang_cl_win

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: windows.yaml
src/: .bazeliskrc  .bazelrc  BUILD.bazel  MODULE.bazel  main.cc
src/bazel/: BUILD.bazel
src/bazel/clang_cl/: extensions.bzl
