# SPDX-FileCopyrightText: Yohei Yukawa
# SPDX-License-Identifier: BSD-3-Clause

package(default_visibility = ["//:__subpackages__"])

platform(
    name = "windows-x86_32",
    constraint_values = [
        "@platforms//cpu:x86_32",
        "@platforms//os:windows",
    ],
)

platform(
    name = "windows-x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

platform(
    name = "windows-arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:windows",
    ],
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    target_compatible_with = ["@platforms//os:windows"],
)
